--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">ImageSearchApp</string>
+    <string name="search">검색</string>
+    <string name="favorite">찜</string>
+    <string name="search_place_holder">검색어를 입력하세요.</string>
+
 </resources>
