--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="favorite">찜</string>
     <string name="search_place_holder">검색어를 입력하세요.</string>
     <string name="refresh">새로고침</string>
+    <string name="favorite_list">찜 목록</string>
 </resources>
